Modificando a parte do desenvolvedor e adicionando um ícone para o head do site.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <title>Calculo IMC</title>
+
+    <link rel="shortcut icon" href="calculator.png" type="image/x-icon" />
+    <title>Calculo IMC - Saiba agora se você está no seu peso ideal!</title>
   </head>
   <body>
     <h1>Calcular IMC</h1>
@@ -61,14 +63,40 @@
       <div class="modal">
         <p><span class="mensage"></span>Seu IMC é: <span class="imc"></span></p>
       </div>
-      <small
-        >Desenvolvido por
-        <a href="https://github.com/leehsanttana" target="_blank"
-          >Leonam Santtana</a
-        ></small
-      >
+      <aside>
+        <p>
+          Desenvolvido por
+          <a
+            href="https://leehsanttana.github.io/personal-portfolio/"
+            target="blank"
+            >Leonam Santana</a
+          >.
+          <a
+            href="https://www.linkedin.com/in/leonam-santana-5352a61b3/"
+            target="_blank"
+            ><i class="fab fa-linkedin-in"></i
+          ></a>
+          <a href="https://github.com/leehsanttana" target="_blank"
+            ><i class="fab fa-github"></i
+          ></a>
+          <a
+            href="https://instagram.com/leonam.santtana?igshid=s2debj44nc6v"
+            target="_blank"
+            ><i class="fab fa-instagram"></i
+          ></a>
+          <a
+            href="https://api.whatsapp.com/send?phone=5521976370007"
+            target="_blank"
+            ><i class="fab fa-whatsapp"></i
+          ></a>
+        </p>
+      </aside>
     </section>
     <section class="modal-section"></section>
+    <script
+      src="https://kit.fontawesome.com/4783fe1c33.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="js/script.js"></script>
   </body>
 </html>
