Modificando o type do input de text para tel

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         <form novalidate>
           <div class="input-container">
             <label for="peso">Informe seu peso (kg):</label>
-            <input type="text" id="peso" maxlength="6" required />
+            <input type="tel" id="peso" maxlength="6" required />
             <p class="error">Preencha o campo acima!</p>
           </div>
           <div class="input-container">
             <label for="altura">Informe sua altura (Metro e Cm):</label>
-            <input type="text" id="altura" maxlength="4" required />
+            <input type="tel" id="altura" maxlength="4" required />
             <p class="error">Preencha o campo acima!</p>
           </div>
           <div class="btn-group">
